test: 휴지통 처리 분기 검증 (#129)